--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
 pandas
-geopandas
 plotly
 openpyxl
 requests
-
-https://drive.google.com/file/d/14TwF5uPra8XssUfwwKGiSPdJY4vkTHGT/view?usp=sharing
+geopandas==0.13.2
+fiona
+pyproj
+shapely
+rtree
