--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ pyproj
 shapely
 matplotlib
 requests
+streamlit>=1.33.0
+pandas>=2.2.0
+geopandas>=0.14.0
+plotly>=5.19.0
+openpyxl>=3.1.2
+xlrd>=2.0.1
+requests>=2.31.0
